data/derived/comb/progs/unify/prog6324.ml.out
Characters 68-69:
  let base = f 0 in
               ^
Error: This expression has type int but an expression was expected of type
         'a -> 'b
